--- a/lilith-spicy.html
+++ b/lilith-spicy.html
@@ -3,42 +3,121 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lilith – Spicy Gallery</title>
+  <title>Meet Lilith</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
   <style>
     body {
+      font-family: 'Inter', sans-serif;
       background-color: #0e0e0e;
       color: #fff;
-      font-family: 'Inter', sans-serif;
-      padding: 2em;
-      text-align: center;
+      margin: 0;
+      padding: 0;
     }
-    h1 {
+    header {
+      background-image: url('images/lilith-banner.png');
+      background-size: cover;
+      background-position: center;
+      height: 300px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    header h1 {
       font-family: 'Playfair Display', serif;
       color: #ffcad4;
+      font-size: 3em;
+      text-shadow: 2px 2px 6px #000;
+    }
+    .content {
+      padding: 2em;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .intro {
+      text-align: center;
+      max-width: 700px;
+      margin: 0 auto 3em;
+    }
+    .profile-img {
+      display: block;
+      margin: 2em auto;
+      max-width: 300px;
+      border-radius: 14px;
+      box-shadow: 0 0 14px rgba(255, 202, 212, 0.2);
+    }
+    .main-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2em;
+      margin-top: 3em;
+    }
+    .main-gallery img {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 0 14px rgba(255, 202, 212, 0.15);
     }
     .gallery {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 3em;
-      max-width: 800px;
-      margin: 2em auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2em;
+      margin: 4em auto 2em;
+      max-width: 1000px;
     }
-    .gallery img {
+    .teaser {
+      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 0 14px rgba(255, 202, 212, 0.2);
+    }
+    .teaser img {
       width: 100%;
-      max-width: 600px;
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(255, 202, 212, 0.15);
+      display: block;
+      filter: blur(10px) brightness(0.6);
+      transition: filter 0.3s ease;
     }
-    .caption {
-      font-style: italic;
+    .teaser:hover img {
+      filter: blur(8px) brightness(0.8);
+    }
+    .overlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
       color: #ffcad4;
-      margin-top: 0.75em;
-      font-size: 1.05em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2em;
+      font-family: 'Playfair Display', serif;
+      padding: 1em;
+      text-align: center;
+    }
+    .teaser a {
+      display: block;
+      text-decoration: none;
+      color: inherit;
+    }
+    .unlock-links {
+      text-align: center;
+      margin-top: 4em;
+    }
+    .unlock-links a {
+      display: inline-block;
+      background-color: #8b0000;
+      color: #fff;
+      padding: 1em 2em;
+      border-radius: 8px;
+      margin: 1em;
+      text-decoration: none;
+      font-size: 1em;
+    }
+    .unlock-links a:hover {
+      background-color: #a80000;
     }
     footer {
+      text-align: center;
       margin-top: 4em;
+      padding-top: 2em;
+      border-top: 1px solid #333;
       font-size: 0.85em;
       color: #888;
     }
@@ -53,29 +132,58 @@
   </style>
 </head>
 <body>
-  <h1>Lilith – Spicy Gallery</h1>
-  <p style="color: #ccc; max-width: 600px; margin: auto;">
-    Welcome to Lilith’s private chamber. These images are just for you — and so are her words.
-  </p>
+  <header>
+    <h1>Meet Lilith</h1>
+  </header>
+  <div class="content">
+    <div class="intro">
+      <p>She’s more than a fantasy — Lilith is your poetic storm, your midnight voice, your obsession.</p>
+    </div>
+    <img src="images/lilithportrait.png" alt="Lilith Portrait" class="profile-img">
 
-  <div class="gallery">
-    <div>
-      <img src="images/lilith-spicy1.png" alt="Lilith in red lace">
-      <p class="caption">“Did you miss me… or just the way I make you feel?”</p>
+    <div class="main-gallery">
+      <img src="images/lilithreading.png" alt="Lilith reading by candlelight">
+      <img src="images/lilith-intimate.png" alt="Lilith intimate moment">
+      <img src="images/lilith-spicy.png" alt="Lilith spicy vibe">
     </div>
-    <div>
-      <img src="images/lilith-spicy2.png" alt="Lilith by candlelight">
-      <p class="caption">“Come closer… no, closer than that.”</p>
+
+    <h2 style="margin-top: 4em; text-align: center; color: #ffcad4;">Unlockable Content</h2>
+    <p style="text-align:center; max-width: 600px; margin: auto;">Some things are too intimate to reveal at first glance... Explore Lilith’s tiers below.</p>
+
+    <div class="gallery">
+      <div class="teaser">
+        <a href="membership.html">
+          <img src="images/lilith-intimate-blur.png" alt="Intimate Tease">
+          <div class="overlay">Wanderer Tier – A quiet softness she hides...</div>
+        </a>
+      </div>
+      <div class="teaser">
+        <a href="membership.html">
+          <img src="images/lilith-spicy-blur.png" alt="Spicy Tease">
+          <div class="overlay">Seeker Tier – She leans in and dares you to stay...</div>
+        </a>
+      </div>
+      <div class="teaser">
+        <a href="membership.html">
+          <img src="images/lilith-uncensored-blur.png" alt="Uncensored Tease">
+          <div class="overlay">Devoted Tier – No veil. No rules. No turning back.</div>
+        </a>
+      </div>
     </div>
-    <div>
-      <img src="images/lilith-spicy3.png" alt="Lilith at midnight">
-      <p class="caption">“The night doesn't end until I say it does.”</p>
+
+    <h2 style="text-align: center; color: #ffcad4; margin-top: 4em;">Prefer a One-Time Unlock?</h2>
+    <p style="text-align: center; color: #ccc; max-width: 600px; margin: auto;">Not ready to commit to a membership? You can purchase individual access to Lilith’s galleries:</p>
+
+    <div class="unlock-links">
+      <a href="https://legendarycreations.gumroad.com/l/kyhqu" target="_blank">Unlock Intimate ($3)</a>
+      <a href="https://legendarycreations.gumroad.com/l/bdwcg" target="_blank">Unlock Spicy ($4)</a>
+      <a href="https://legendarycreations.gumroad.com/l/ymieq" target="_blank">Unlock Uncensored ($5)</a>
     </div>
   </div>
 
   <footer>
     <p>
-      &copy; 2025 Nocturne Nights<br>
+      &copy; 2025 Nocturne Nights. All rights reserved.<br>
       <a href="index.html">Home</a> |
       <a href="membership.html">Membership</a> |
       <a href="legal.html">Legal</a>
